--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,6 +1,5 @@
 .form {
   box-sizing: border-box;
-  width: 320px;
   margin-top: 13px;
 }
 
@@ -55,18 +54,14 @@
   }
 }
 
-.form__wrapper--first {
-  margin: 0 auto;
-  padding: 0;
-  padding-top: 10px;
-  background-color: #f2f2f2;
-}
-
 .form__progress {
+  position: relative;
   border: none;
   margin: 0 auto;
+  margin-bottom: 18px;
   padding: 0;
-  padding-top: 6px;
+  padding-top: 104px;
+  background-color: #f2f2f2;
 }
 
 .form__progress-wrapper {
@@ -75,10 +70,8 @@
 
 .form__progress .form__name {
   display: block;
-  margin: 0;
-  margin-bottom: 23px;
-  padding-top: 28px;
-  font-family: "Open Sans", "Arial", sans-serif;
+  position: absolute;
+  top: 6px;
   color: #d22856;
   font-weight: normal;
   font-size: 14px;
@@ -98,7 +91,6 @@
 
 .form__progress .form__mark {
   position: relative;
-  font-family: "Open Sans", "Arial", sans-serif;
   color: #283645;
   font-weight: normal;
   font-size: 18px;
@@ -146,15 +138,13 @@
 .form__user-contact {
   border: none;
   margin: 0 auto;
-  margin-top: 20px;
+  margin-bottom: 25px;
 }
 
 .form__user-contact label {
   padding-left: 23px;
-  font-family: "Open Sans", "Arial", sans-serif;
   color: #d22856;
   font-weight: normal;
-  font-size: 14px;
   line-height: 30px;
   text-transform: uppercase;
 }
@@ -163,28 +153,24 @@
   display: none;
 }
 
-.form__wrapper--second {
-  margin: 0 auto;
-  margin-top: 25px;
-  padding: 0;
-  padding-top: 37px;
-  padding-bottom: 2px;
-  background-color: #f2f2f2;
-}
-
 .form__app {
+  position: relative;
   border: none;
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
+  padding-bottom: 2px;
+  padding-top: 73px;
+  background-color: #f2f2f2;
 }
 
 .form__app legend {
   display: block;
-  width: 189px;
-  font-family: "Open Sans", "Arial", sans-serif;
+  position: absolute;
+  top: 38px;
+  left: 67px;
+  width: 185px;
   text-align: center;
   text-transform: uppercase;
-  font-size: 14px;
   line-height: 18px;
   font-weight: normal;
   color: #d22856;
@@ -204,13 +190,13 @@
   color: #283645;
   margin-top: 20px;
   padding-top: 20px;
-  padding-left: 90px;
+  padding-left: 70px;
 
   &::before {
     content: "";
     position: absolute;
     top: 13px;
-    left: 20px;
+    left: 0;
     width: 39px;
     height: 39px;
     border: 2px solid #e5e5e5;
@@ -235,7 +221,7 @@
   content: "";
   position: absolute;
   top: 25px;
-  left: 32px;
+  left: 12px;
   width: 15px;
   height: 15px;
   background-color: #d22856;
@@ -245,7 +231,7 @@
 .form__post {
   border: none;
   margin: 0 auto;
-  margin-top: 32px;
+  margin-bottom: 46px;
   padding: 0;
 }
 
@@ -287,8 +273,8 @@
 }
 
 .form__button {
-  margin-top: 44px;
-  margin-left: 20px;
+  display: block;
+  margin: 0 auto;
   padding-top: 16px;
   padding-bottom: 16px;
   width: 280px;
@@ -338,7 +324,6 @@
 
 @media (min-width: 660px) {
   .form {
-    width: 660px;
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 87px;
@@ -374,18 +359,14 @@
     }
   }
 
-  .form__wrapper--first {
-    order: 4;
-    margin-top: 48px;
-    background-color: #ffffff;
-  }
-
   .form__progress {
+    order: 4;
     border: 2px solid #e5e5e5;
     width: 620px;
     margin-bottom: 65px;
     padding-top: 0;
     padding-bottom: 7px;
+    background-color: #ffffff;
   }
 
   .form__progress .form__block {
@@ -393,6 +374,7 @@
   }
 
   .form__progress .form__name {
+    position: static;
     padding-top: 0;
     margin-bottom: 33px;
     width: 432px;
@@ -419,12 +401,12 @@
 
   .form__user-contact {
     order: 3;
-    min-width: 537px;
+    width: 660px;
+    margin-left: 20px;
+    margin-right: 20px;
     border: 2px solid #e6e6e6;
     display: flex;
     margin-top: 56px;
-    margin-left: 20px;
-    margin-right: 20px;
     flex-grow: 1;
     padding-top: 22px;
     padding-left: 59px;
@@ -472,6 +454,10 @@
     color: #d22856;
   }
 
+  .form__user-contact .form__blocks {
+    width: 537px;
+  }
+
   .form__user-contact .form__block {
     display: flex;
     flex-direction: column-reverse;
@@ -485,25 +471,18 @@
     padding-right: 70px;
   }
 
-  .form__wrapper--second {
-    order: 2;
-    width: 660px;
-    margin: 0;
-    padding: 0;
-    padding-left: 20px;
-    padding-right: 20px;
-    background-color: #ffffff;
-  }
-
   .form__app {
+    order: 2;
     border: 2px solid #e5e5e5;
     padding-top: 8px;
     padding-left: 39px;
     padding-bottom: 14px;
+    background-color: #ffffff;
   }
 
   .form__app legend {
     width: 368px;
+    position: static;
   }
 
   .form__app .form__mark {
