--- a/source/less/style.less
+++ b/source/less/style.less
@@ -24,3 +24,4 @@
 @import "blocks/copyright.less";
 @import "blocks/form-title.less";
 @import "blocks/histori.less";
+@import "blocks/gallery__title.less";
