Добавляет правки на страницу формы

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -336,6 +336,8 @@
 
 @media (min-width: 660px) {
   .form {
+    width: 660px;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 87px;
@@ -426,8 +428,8 @@
     border: 2px solid #e6e6e6;
     display: flex;
     flex-grow: 1;
+    padding: 0;
     padding-top: 22px;
-    padding-left: 59px;
     padding-bottom: 2px;
   }
 
@@ -440,7 +442,7 @@
       content: "";
       position: absolute;
       top: -61px;
-      right: 39px;
+      right: 2px;
       width: 59px;
       height: 59px;
       background-color: #e5e5e5;
@@ -473,7 +475,8 @@
   }
 
   .form__user-contact .form__blocks {
-    width: 537px;
+    width: 500px;
+    margin: 0 auto;
   }
 
   .form__user-contact .form__block {
@@ -562,6 +565,7 @@
 
 @media (min-width: 960px) {
   .form {
+    width: 960px;
     margin-bottom: 70px;
     padding-left: 10px;
     padding-right: 10px;
