--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -62,6 +62,16 @@
   color: #d22856;
 }
 
+.contacts__item:hover[href],
+.contacts__item:focus[href] {
+  color: #283645;
+  text-decoration: underline;
+}
+
+.contacts__item:active[href] {
+  opacity: 0.3;
+}
+
 .contacts__street {
   padding-top: 10px;
 }
