--- a/source/less/blocks/icon-list.less
+++ b/source/less/blocks/icon-list.less
@@ -15,19 +15,10 @@
   }
 }
 
-@media (min-width: 660px) {
-  .icon-list {
-    background-color: transparent;
-    margin-left: 48px;
-    margin-bottom: 31px;
-  }
-}
-
-@media (min-width: 960px) {
-  .icon-list {
-    margin-left: 48px;
-    margin-bottom: 50px;
-  }
+.icon-list__item a {
+  display: block;
+  width: 47px;
+  height: 56px;
 }
 
 .icon-list--ios {
@@ -48,4 +39,19 @@
   height: 56px;
   margin-top: 4px;
   background: url("../img/logo-microsoft.svg") no-repeat 50% 50%;
+}
+
+@media (min-width: 660px) {
+  .icon-list {
+    background-color: transparent;
+    margin-left: 48px;
+    margin-bottom: 31px;
+  }
+}
+
+@media (min-width: 960px) {
+  .icon-list {
+    margin-left: 48px;
+    margin-bottom: 50px;
+  }
 }
