--- a/source/less/blocks/slider-price.less
+++ b/source/less/blocks/slider-price.less
@@ -16,6 +16,7 @@
   padding-left: 22px;
   padding-top: 10px;
   padding-bottom: 10px;
+  padding-right: 55px;
   font-weight: normal;
   line-height: 30px;
   color: #283645;
@@ -296,6 +297,7 @@
     padding-left: 17px;
     padding-top: 7px;
     padding-bottom: 8px;
+    padding-right: 5px;
   }
 
   .slider-price__first-title {
