--- a/source/less/style.less
+++ b/source/less/style.less
@@ -25,3 +25,4 @@
 @import "blocks/form-title.less";
 @import "blocks/histori.less";
 @import "blocks/gallery__title.less";
+@import "blocks/popup.less";
