--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -44,12 +44,12 @@
   line-height: 30px;
   border: 2px solid #e5e5e5;
 
-  &:hover,
-  &:focus {
+  &:hover {
     border-color: #283645;
   }
 
-  &:active {
+  &:active,
+  &:focus {
     border-color: #d22856;
   }
 }
@@ -112,12 +112,12 @@
     border: 2px solid #e5e5e5;
   }
 
-  &:hover::before,
-  &:focus::before {
+  &:hover::before {
     border: 2px solid #283645;
   }
 
-  &:active::before {
+  &:active::before,
+  &:focus::before {
     border: 2px solid #d22856;
   }
 }
@@ -217,12 +217,12 @@
     cursor: pointer;
   }
 
-  &:hover::before,
-  &:focus::before {
+  &:hover::before {
     border-color: #283645;
   }
 
-  &:active::before {
+  &:active::before,
+  &:focus::before {
     border-color: #d22856;
   }
 }
@@ -274,12 +274,12 @@
   font-weight: normal;
   color: #283645;
 
-  &:hover,
-  &:focus {
+  &:hover {
     border-color: #283645;
   }
 
-  &:active {
+  &:active,
+  &:focus {
     border-color: #d22856;
   }
 }
@@ -588,7 +588,7 @@
     margin-top: 12px;
   }
 
-  .form__personal .form__block:nth-of-type(3) {
+  .form__personal .form__block:last-child {
     margin-bottom: 0;
   }
 
@@ -618,6 +618,7 @@
   .form__user-contact .form__blocks {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     width: 820px;
     margin: 0 auto;
   }
