--- a/source/less/blocks/gallery__title.less
+++ b/source/less/blocks/gallery__title.less
@@ -8,8 +8,9 @@
 
 .gallery-title__photo {
   box-sizing: border-box;
+  margin-bottom: 46px;
   padding-top: 101px;
-  padding-bottom: 54px;
+  padding-bottom: 82px;
   width: 320px;
   color: #ffffff;
   font-size: 24px;
