--- a/source/less/style.less
+++ b/source/less/style.less
@@ -26,3 +26,4 @@
 @import "blocks/histori.less";
 @import "blocks/gallery__title.less";
 @import "blocks/popup.less";
+@import "blocks/gallery.less";
