--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -1,3 +1,7 @@
+.gallery {
+  margin-bottom: 43px;
+}
+
 .gallery__show {
   width: 296px;
   margin-bottom: 48px;
@@ -12,11 +16,34 @@
 }
 
 .gallery__item {
+  position: relative;
   margin-bottom: 20px;
+}
+
+.gallery__item--winner::before {
+  content: "Панорама дня";
+  position: absolute;
+  top: 0;
+  right: 20px;
+  width: 140px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 12px;
+  background-color: #d22856;
+  color: #ffffff;
+  text-align: center;
+  padding-top: 11px;
+  padding-bottom: 12px;
 }
 
 .gallery__foto {
   display: block;
+}
+
+.gallery__wrapper {
+  width: 280px;
+  margin: 0 auto;
+  background-color: #f2f2f2;
 }
 
 .gallery__time {
@@ -27,7 +54,6 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  background-color: #f2f2f2;
 }
 
 .gallery__autor {
@@ -58,7 +84,6 @@
   padding-bottom: 14px;
   color: #283645;
   font-weight: 300;
-  background-color: #f2f2f2;
 }
 
 .gallery__likes {
@@ -70,7 +95,6 @@
   padding: 0 18px;
   padding-bottom: 26px;
   align-items: center;
-  background-color: #f2f2f2;
 }
 
 .gallery__like {
