Добавляет ползунок на дивах

--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -40,6 +40,10 @@
   display: block;
 }
 
+.gallery__foto img {
+  display: block;
+}
+
 .gallery__wrapper {
   width: 280px;
   margin: 0 auto;
@@ -49,7 +53,7 @@
 .gallery__time {
   width: 280px;
   margin: 0 auto;
-  padding: 14px 18px;
+  padding: 17px 18px;
   padding-bottom: 0;
   display: flex;
   flex-wrap: wrap;
