--- a/source/less/blocks/new-post.less
+++ b/source/less/blocks/new-post.less
@@ -2,187 +2,11 @@
   margin-bottom: -17px;
 }
 
-.new-post__form {
-  padding-top: 20px;
-  padding-bottom: 41px;
-  background-color: #f2f2f2;
-}
-
-.new-post__upload {
-  position: relative;
-  margin-bottom: 40px;
-  width: 280px;
-  min-height: 374px;
-}
-
-.new-post__input {
-  position: absolute;
-  z-index: 0;
-  opacity: 0;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  cursor: pointer;
-}
-
-.new-post__setup-user-pic {
-  display: block;
-  margin: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.new-post__setings {
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  width: 216px;
-  margin: 0 auto;
-  margin-bottom: 38px;
-  padding-right: 13px;
-  padding-bottom: 73px;
-  justify-content: space-between;
-
-  &::after {
-    content: "";
-    display: block;
-    position: absolute;
-    bottom: 0;
-    left: -52px;
-    width: 148%;
-    height: 1px;
-    background-color: #dddfe0;
-  }
-}
-
-.new-post__setings-crop,
-.new-post__setings-fill,
-.new-post__setings-contrast {
-  fill: #b5b9be;
-}
-
-.new-post__block-crop {
-  cursor: pointer;
-}
-
-.new-post__block-fill {
-  margin-top: 2px;
-  margin-right: 6px;
-  cursor: pointer;
-}
-
-.new-post__block-contrast {
-  margin-top: 8px;
-  cursor: pointer;
-}
-
-.new-post__active {
-  fill: #d22856;
-
-  &::before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 240px;
-    height: 2px;
-    background-color: #283645;
-  }
-}
-
-.new-post__range-controls {
-  position: relative;
-}
-
-.new-post__block-crop .new-post__scale {
-  display: block;
-  position: absolute;
-  top: 38px;
-  left: -13px;
-  width: 240px;
-  height: 2px;
-  background-color: #283645;
-}
-
-.new-post__block-crop .new-post__range-toggle {
-  display: block;
-  position: absolute;
-  top: 32px;
-  left: 180px;
-  width: 14px;
-  height: 14px;
-  border-radius: 50%;
-  border: 2px solid #d22856;
-  background-color: #f2f2f2;
-}
-
-.new-post__block-fill .new-post__scale {
-  display: none;
-  position: absolute;
-  top: 36px;
-  left: -98px;
-  width: 240px;
-  height: 2px;
-  background-color: #283645;
-}
-
-.new-post__block-fill .new-post__range-toggle {
-  display: none;
-  position: absolute;
-  top: 30px;
-  left: 95px;
-  width: 14px;
-  height: 14px;
-  border-radius: 50%;
-  border: 2px solid #d22856;
-  background-color: #f2f2f2;
-}
-
-.new-post__block-contrast .new-post__scale {
-  display: none;
-  position: absolute;
-  top: 42px;
-  left: -185px;
-  width: 240px;
-  height: 2px;
-  background-color: #283645;
-}
-
-.new-post__block-contrast .new-post__range-toggle {
-  display: none;
-  position: absolute;
-  top: 36px;
-  left: 8px;
-  width: 14px;
-  height: 14px;
-  border-radius: 50%;
-  border: 2px solid #d22856;
-  background-color: #f2f2f2;
-}
-
-.new-post__up,
-.new-post__off {
-  margin: 0 auto;
-  padding-top: 14px;
-  padding-bottom: 17px;
-  width: 280px;
-  border: 3px solid;
-  border-radius: 27px;
-  font-size: 18px;
-  line-height: 18px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.new-post__up {
-  border-color: #d22856;
-  color: #d22856;
-  margin-bottom: 12px;
-}
-
-.new-post__off {
-  border-color: #dddfe0;
-  color: #dddfe0;
+.new-post__photo {
+  margin-bottom: 42px;
+  font-size: 14px;
+  line-height: 30px;
+  text-align: center;
+  color: #283645;
+  font-weight: normal;
 }
