Добавляет правки в планшетную версию

--- a/source/less/blocks/new-post.less
+++ b/source/less/blocks/new-post.less
@@ -10,3 +10,10 @@
   color: #283645;
   font-weight: normal;
 }
+
+@media (min-width: 660px) {
+  .new-post__photo {
+    font-size: 18px;
+    margin-bottom: 69px;
+  }
+}
