--- a/source/less/blocks/post-form.less
+++ b/source/less/blocks/post-form.less
@@ -225,3 +225,25 @@
   background-color: #283645;
   opacity: 0.3;
 }
+
+@media(min-width: 660px) {
+  .post-form__wrapper {
+    padding-top: 36px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .post-form__upload {
+    width: 300px;
+    min-height: 400px;
+  }
+
+  .post-form__setings-wrapper {
+    width: 300px;
+  }
+
+  .post-form__setings {
+    flex-direction: column;
+  }
+}
