--- a/source/less/blocks/new-post.less
+++ b/source/less/blocks/new-post.less
@@ -12,8 +12,22 @@
 }
 
 @media (min-width: 660px) {
+  .new-post {
+    margin-bottom: -4px;
+  }
+
   .new-post__photo {
     font-size: 18px;
     margin-bottom: 69px;
+  }
+}
+
+@media (min-width: 960px) {
+  .new-post {
+    margin-bottom: 98px;
+  }
+
+  .new-post__photo {
+    margin-bottom: 66px;
   }
 }
