--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -56,6 +56,19 @@
   min-height: 63px;
 }
 
+.page-header__logo svg {
+  fill: #ffffff;
+}
+
+.page-header__logo:hover svg {
+  fill: #d22856;
+}
+
+.page-header__logo:active svg {
+  fill: #ffffff;
+  opacity: 0.3;
+}
+
 @media (min-width: 320px) {
   .page-header__logo {
     width: 100px;
