--- a/source/less/style.less
+++ b/source/less/style.less
@@ -27,5 +27,6 @@
 @import "blocks/gallery__title.less";
 @import "blocks/popup.less";
 @import "blocks/gallery.less";
+@import "blocks/panorama.less";
 @import "blocks/new-post.less";
 @import "blocks/post-form.less";
