--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -183,6 +183,7 @@
 
   .gallery__list {
     width: 960px;
+    justify-content: flex-start;
   }
 
   .gallery__show {
@@ -192,5 +193,10 @@
 
   .gallery__item {
     margin-bottom: 54px;
+    margin-right: 20px;
+
+    &:nth-of-type(3n) {
+      margin-right: 0;
+    }
   }
 }
