--- a/source/less/blocks/post-form.less
+++ b/source/less/blocks/post-form.less
@@ -57,6 +57,21 @@
   }
 }
 
+.post-form__button--crop:hover svg,
+.post-form__button--crop:focus svg,
+.post-form__button--fill:hover svg,
+.post-form__button--fill:focus svg,
+.post-form__button--contrast:hover svg,
+.post-form__button--contrast:focus svg {
+  fill: #8d949b;
+}
+
+.post-form__button--crop:active svg,
+.post-form__button--fill:active svg,
+.post-form__button--contrast:active svg {
+  fill: #d22856;
+}
+
 .post-form__button--crop,
 .post-form__button--fill,
 .post-form__button--contrast {
@@ -76,7 +91,7 @@
   margin-top: 8px;
 }
 
-.post-form__block--active .post-form__setings {
+.post-form__block--active .post-form__svg-active {
   fill: #d22856;
 }
 
@@ -216,12 +231,6 @@
   &:disabled {
     opacity: 0.07;
   }
-}
-
-.post-form__off:active span {
-  color: #ffffff;
-  background-color: #283645;
-  opacity: 0.3;
 }
 
 @media (min-width: 660px) {
