--- a/source/less/blocks/gallery__title.less
+++ b/source/less/blocks/gallery__title.less
@@ -5,6 +5,10 @@
   background-repeat: no-repeat;
   background-position: 50% 5px;
   background-size: 100% auto;
+
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+  }
 }
 
 .gallery-title__photo {
@@ -27,6 +31,10 @@
     background-repeat: no-repeat;
     background-position: -268px 4px;
     background-size: 1200px auto;
+
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url("../img/bg-back-tablet@2x.jpg");
+    }
   }
 
   .gallery-title__photo {
@@ -45,6 +53,10 @@
     background-repeat: no-repeat;
     background-position: -798px 2px;
     background-size: 2560px auto;
+
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url("../img/bg-back-desktop@2x.jpg");
+    }
   }
 
   .gallery-title__photo {
