--- a/source/less/blocks/form-title.less
+++ b/source/less/blocks/form-title.less
@@ -4,6 +4,10 @@
   background-repeat: no-repeat;
   background-position: 50% 5px;
   background-size: 100% auto;
+
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+  }
 }
 
 .form-title__tender {
@@ -25,6 +29,10 @@
     background-repeat: no-repeat;
     background-position: -268px 4px;
     background-size: 1200px auto;
+
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url("../img/bg-back-tablet@2x.jpg");
+    }
   }
 
   .form-title__tender {
@@ -43,6 +51,10 @@
     background-repeat: no-repeat;
     background-position: -798px 2px;
     background-size: 2560px auto;
+
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url("../img/bg-back-desktop@2x.jpg");
+    }
   }
 
   .form-title__tender {
